[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/themas/main.tres" type="Theme" id=1]
[ext_resource path="res://Script/HostGame.gd" type="Script" id=2]
[ext_resource path="res://Assets/background.png" type="Texture" id=3]
[ext_resource path="res://Assets/CutiesCaps Free.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[node name="HostGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Back" type="TextureRect" parent="."]
margin_left = 4.85498
margin_top = -7.50732
margin_right = 1290.86
margin_bottom = 722.493
texture = ExtResource( 3 )
expand = true

[node name="Panel" type="Panel" parent="Back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.485
margin_top = -246.0
margin_right = 205.515
margin_bottom = 246.0

[node name="LabInfoHost" type="Label" parent="Back/Panel"]
margin_left = 14.0
margin_top = 8.0
margin_right = 392.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 1 )
text = "Seus amigos devem da join em :"
align = 1
valign = 1
autowrap = true

[node name="LabNumPlayers" type="Label" parent="Back/Panel"]
margin_left = 14.0
margin_top = 106.552
margin_right = 392.0
margin_bottom = 161.552
custom_fonts/font = SubResource( 1 )
text = "Players (0/6)"
align = 1
valign = 1
autowrap = true

[node name="LabPlayer0" type="Label" parent="Back/Panel"]
margin_left = 25.0
margin_top = 184.718
margin_right = 388.0
margin_bottom = 216.718
text = "-"
align = 1
valign = 1

[node name="LabPlayer1" type="Label" parent="Back/Panel"]
margin_left = 25.0
margin_top = 204.438
margin_right = 388.0
margin_bottom = 236.438
text = "-"
align = 1
valign = 1

[node name="LabPlayer2" type="Label" parent="Back/Panel"]
margin_left = 25.0
margin_top = 224.157
margin_right = 388.0
margin_bottom = 256.157
text = "-"
align = 1
valign = 1

[node name="LabPlayer3" type="Label" parent="Back/Panel"]
margin_left = 25.0
margin_top = 244.734
margin_right = 388.0
margin_bottom = 276.734
text = "-"
align = 1
valign = 1

[node name="LabPlayer4" type="Label" parent="Back/Panel"]
margin_left = 25.0
margin_top = 267.026
margin_right = 388.0
margin_bottom = 299.026
text = "-"
align = 1
valign = 1

[node name="LabPlayer5" type="Label" parent="Back/Panel"]
margin_left = 25.0
margin_top = 285.888
margin_right = 388.0
margin_bottom = 317.888
text = "-"
align = 1
valign = 1

[node name="BtnStartHost" type="Button" parent="Back/Panel"]
margin_left = 65.0028
margin_top = 349.585
margin_right = 349.003
margin_bottom = 403.585
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Iniciar !"

[node name="BtnCancela" type="Button" parent="Back/Panel"]
margin_left = 65.0028
margin_top = 409.442
margin_right = 349.003
margin_bottom = 463.442
custom_fonts/font = SubResource( 2 )
text = "Cancelar !"

[connection signal="pressed" from="Back/Panel/BtnStartHost" to="." method="_on_BtnStartHost_pressed"]
[connection signal="pressed" from="Back/Panel/BtnCancela" to="." method="_on_BtnCancela_pressed"]
